Fix checkbox styling on Safari

--- a/components/task-item.css
+++ b/components/task-item.css
@@ -5,7 +5,9 @@ section {
 }
 
 #complete {
+  -webkit-appearance: none;
   appearance: none;
+  font-family: var(--font-face);
 }
 
 #complete:before {
